--- a/Foresome/Foresome/Onboarding/ForgotPassword/View/ForgotPasswordViewController.xib
+++ b/Foresome/Foresome/Onboarding/ForgotPassword/View/ForgotPasswordViewController.xib
@@ -22,6 +22,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="ForgotPasswordViewController" customModule="Foresome" customModuleProvider="target">
             <connections>
+                <outlet property="forgotEmailField" destination="cjz-S0-71g" id="Ezy-zT-oRW"/>
                 <outlet property="forgotLabel" destination="fjG-r9-2c3" id="hf0-0x-tyh"/>
                 <outlet property="submitBottomConstraint" destination="qzn-dd-XEg" id="EIX-J0-gIt"/>
                 <outlet property="submitButton" destination="4yF-y1-dS1" id="zfq-ns-3N6"/>
