--- a/Foresome/Foresome/AfterLogin/TournamentDetailView/TournamentDetailViewController.xib
+++ b/Foresome/Foresome/AfterLogin/TournamentDetailView/TournamentDetailViewController.xib
@@ -25,9 +25,11 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="TournamentDetailViewController" customModule="Foresome" customModuleProvider="target">
             <connections>
+                <outlet property="headerImage" destination="fwE-3F-adD" id="5PV-FT-gSd"/>
                 <outlet property="minusBtn" destination="qf1-zp-rys" id="DNq-wj-ADb"/>
                 <outlet property="participantNumberLabel" destination="FoR-8q-TCk" id="SvR-gC-7bd"/>
                 <outlet property="plusBtn" destination="rG6-9w-sZC" id="aCH-HM-OdX"/>
+                <outlet property="scroll" destination="WBu-Qd-UVD" id="kjd-RO-Bag"/>
                 <outlet property="selectLabel" destination="vu6-5g-1nb" id="T3f-34-AIX"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
                 <outlet property="viewOnMapBtn" destination="lSa-HN-YjJ" id="so9-29-lfg"/>
